--- a/app/assets/stylesheets/core/plugins/react-select.scss
+++ b/app/assets/stylesheets/core/plugins/react-select.scss
@@ -183,7 +183,9 @@
     }
 
     .Select-arrow {
+      position: relative;
       right: -.15em;
+      top: .1em;
     }
   }
 
